@@ -1,7 +1,7 @@
 Source: globus-gram-job-manager
 Priority: optional
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-scheduler-event-generator-dev (>= 4), libglobus-xio-popen-driver-dev (>= 2), libglobus-xio-dev (>= 3), libglobus-gss-assist-dev (>= 8), libglobus-gsi-sysconfig-dev (>= 5), libglobus-callout-dev (>= 2), libglobus-gram-job-manager-callout-error-dev (>= 2), libglobus-gram-protocol-dev (>= 11), libglobus-common-dev (>= 14), libglobus-usage-dev (>= 3), libglobus-rsl-dev (>= 9), libglobus-gass-cache-dev (>= 8), libxml2-dev, libglobus-gass-transfer-dev (>= 7), libglobus-gram-protocol-doc (>= 9), libglobus-common-doc (>= 0), doxygen (<< 1.6.2-1) | doxygen (>> 1.6.2-1), graphviz, pkg-config, globus-gram-client-tools (>= 10), globus-gsi-cert-utils-progs (>= 0), globus-gatekeeper (>= 0), globus-gram-job-manager-scripts (>= 0), globus-gram-job-manager-fork-setup-poll (>= 0), libglobus-gram-client-dev, globus-gass-copy-progs (>= 0), libglobus-gass-server-ez-dev, globus-proxy-utils (>= 0), libglobus-gssapi-gsi-dev (>= 0)
+Build-Depends: debhelper (>= 5), autotools-dev, quilt, libglobus-scheduler-event-generator-dev (>= 4), libglobus-xio-popen-driver-dev (>= 2), libglobus-xio-dev (>= 3), libglobus-gss-assist-dev (>= 8), libglobus-gsi-sysconfig-dev (>= 5), libglobus-callout-dev (>= 2), libglobus-gram-job-manager-callout-error-dev (>= 2), libglobus-gram-protocol-dev (>= 11), libglobus-common-dev (>= 14), libglobus-usage-dev (>= 3), libglobus-rsl-dev (>= 9), libglobus-gass-cache-dev (>= 8), libxml2-dev, libglobus-gass-transfer-dev (>= 7), libglobus-gram-protocol-doc (>= 9), libglobus-common-doc (>= 0), doxygen (<< 1.6.2-1) | doxygen (>> 1.6.2-1), graphviz, pkg-config, globus-gram-client-tools (>= 10), globus-gsi-cert-utils-progs (>= 0), globus-gatekeeper (>= 0), globus-gram-job-manager-scripts (>= 0), globus-gram-job-manager-fork-setup-poll (>= 0), libglobus-gram-client-dev, globus-gass-copy-progs (>= 0), libglobus-gass-server-ez-dev, globus-proxy-utils (>= 0), libglobus-gssapi-gsi-dev (>= 10)
 Standards-Version: 3.9.0
 Section: net
 DM-Upload-Allowed: yes
