@@ -1,3 +1,9 @@
+globus-gram-job-manager (14.10-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 16:02:26 -0400
+
 globus-gram-job-manager (14.9-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
